# CampusActivitySystem

./: .gitignore  CampusActivitySystem.sln  README.md  TestData.sql  build.ps1  release.ps1
docs/: API测试指南.md  数据库配置指南.md  日程表数据库配置指南.md  校园活动管理系统.pptx  部署运行指南.md  项目结构说明.md
src/CampusActivity.Application/: CampusActivity.Application.csproj
src/CampusActivity.Application/Mappings/: AutoMapperProfile.cs
src/CampusActivity.Application/Services/: ActivityService.cs  EnhancedRecommendationService.cs  IActivityService.cs  IRecommendationService.cs  IScheduleService.cs  IUserService.cs  RecommendationService.cs  ScheduleService.cs  UserContextService.cs  UserService.cs
src/CampusActivity.BlazorWeb/: App.razor  CampusActivity.BlazorWeb.csproj  Program.cs  _Imports.razor  appsettings.Development.json  appsettings.json
src/CampusActivity.BlazorWeb/Data/: WeatherForecast.cs  WeatherForecastService.cs
src/CampusActivity.BlazorWeb/Pages/: Activities.razor  ActivityCreate.razor  ActivityDetail.razor  Admin.razor  AdminActivities.razor  (+17 more)
src/CampusActivity.Core/: CMakeLists.txt
src/CampusActivity.Core/include/: ActivityAnalyzer.h  CampusActivityCore.h
src/CampusActivity.Domain/: CampusActivity.Domain.csproj
src/CampusActivity.Infrastructure/: CampusActivity.Infrastructure.csproj
src/CampusActivity.NativeLib/: CampusActivity.NativeLib.vcxproj  RecommendationEngine.cpp  RecommendationEngine.h
src/CampusActivity.WebAPI/: CampusActivity.WebAPI.csproj  CampusActivity.WebAPI.http  Program.cs  appsettings.json
构建安装脚本/: build.ps1  install.ps1  start.ps1  stop.ps1
(+54 files in other folders)
